# skid

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  structs.rs  util.rs
src/cli/: handler.rs  input.rs  log.rs
src/structs/: assignment.rs  class.rs  classes.rs
src/util/: config.rs  indent.rs
